fix dark mode padding and css styles

--- a/app/components/layout/main.css
+++ b/app/components/layout/main.css
@@ -14,6 +14,6 @@
 
 @media (min-width: 600px) {
   .body {
-    margin: 2rem 6rem;
+    padding: 4rem 12rem;
   }
 }
